css/securityconsult.css
/*!
 * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */

html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.text-vertical-center h1 {
    margin: 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
}

.modal-content
{
	background: rgba(255, 255, 255, .7);
}


.rotated
{
	-moz-transform:rotate(-90deg);
    -ms-transform:rotate(-90deg);
    -o-transform:rotate(-90deg);
    -webkit-transform:rotate(-90deg);
    transform-origin: top left;
}

.container-box
{
	display:inline-block;
	padding:10px;
	background: rgba(255, 255, 255, .8);
	border: 1px solid #fff;
	position: fixed;
  	top: 55%;
  	left: 0;

}



/* Custom Button Styles */

.btn-dark {
    border-radius: 0;
    color: #fff;
    background-color: rgba(0,0,0,0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: rgba(0,0,0,0.7);
}

.btn-light {
    border-radius: 0;
    color: #333;
    background-color: rgb(255,255,255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255,255,255,0.8);
}


/* jumbotron transparent */

.jumbotron-transparent {
    z-index:1;
    background: none;
    border-style: solid;
    background-color: rgba(66, 129, 202, 0.2);
    min-height:480px;
        vertical-align: middle;
}

.jumbotron-rates {
    z-index:1;
    background: none;

        vertical-align: middle;
}

.jumbotron-rates a:visited {
    color: black;
}

.jumbotron-box {
    vertical-align: middle;
    padding:10px;
}
/* Custom Horizontal Rule */

hr.small {
    max-width: 100px;
}

/* Side Menu */
#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    right: 0;
    width: 250px;
    height: 100%;
    margin-right: -250px;
    overflow-y: auto;
    background: #222;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 55px;
    font-size: 18px;
    line-height: 55px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

#menu-toggle {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
}

#sidebar-wrapper.active {
    right: 250px;
    width: 250px;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.toggle {
    margin: 5px 5px 0 0;
}

/* Header */

.header {
    display: table;
    position: relative;
    width: 100%;
    height: 100%;
    background: url(../img/bg.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

/* About */

.about {
    padding: 50px 0;
}

/* Services */

.services {
    padding: 50px 0;
}

.service-item {
    margin-bottom: 30px;
}

/* brands */
.list-inline-brands ul {
  list-style: none;
  overflow: hidden;
  padding-left: 0;
  margin-left: -5px;
  list-style: none;
}
.list-inline-brands li {
  display: inline-block;
  padding-right: 5px;
  padding-left: 5px;
  font-size: 28px
}

.list-inline-brands li:not(:first-child):before {
    content: " / "
}


/* Callout */

.callout {
    display: table;
    width: 100%;
    height: 400px;
    color: #fff;
    background: url(../img/callout.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}




/* Portfolio */

.portfolio {
    padding: 50px 0;
}

.portfolio-item {
    margin-bottom: 30px;
}

.img-portfolio {
    margin: 0 auto;
    max-height: 480px;
}

.img-portfolio:hover {
    opacity: 0.8;
}

/* Call to Action */

.call-to-action {
    padding: 50px 0;
}

.call-to-action a {
    text-decoration: underline;
    color: #000;
}

.call-to-action .btn {
    margin: 10px;
}

/* Map */

.map {
    height: 500px;
}

@media(max-width:768px) {
    .map {
        height: 75%;
    }
}

/*disable custom maps scrolling behaviour*/
.scrolloff {
    pointer-events: none;
}

/* Footer */

footer {
    padding: 100px 0;
}


/* authorized */

.authorized {
    padding-block-start: 50px;
}

.authorized-item {
    margin-bottom: 100px;
}

.img-authorized {
    margin: 10px auto;
}

.img-authorized:hover {
    opacity: 0.8;
}

/* google maps */

#map {
  width: 500px;
  height: 400px;
}

.reviews {
  float: right;
  width: calc(100% - 520px);
  padding-right: 50px;
  font-size: 0.8em;
  height: 400px;
  overflow: auto;
}

.review-list {
  margin: 0;
}

.review-list li+li {
  margin-top: 1em;
  padding-top: 1em;
  border-top: 1px solid black;
}
.review-list em{display:block;margin:0.3em 0;}

